--- a/apps-script/index.html
+++ b/apps-script/index.html
@@ -139,12 +139,8 @@
           <tbody id="tablaBody">
             <tr>
               <td colspan="7" class="text-center py-16 text-gray-400">
-                <div class="text-3xl mb-3">&#128203;</div>
-                <div class="text-sm font-medium">Selecciona las fechas y presiona un botón</div>
-                <div class="text-xs mt-2">
-                  <span class="text-saasa-600 font-semibold">Sincronizar API</span> = datos frescos desde GeoVictoria |
-                  <span class="text-emerald-600 font-semibold">Cargar desde BD</span> = datos guardados (rápido)
-                </div>
+                <div class="spinner mx-auto mb-4"></div>
+                <div class="text-sm">Cargando datos desde Azure MySQL...</div>
               </td>
             </tr>
           </tbody>
@@ -192,13 +188,14 @@
 
 
     // ── Inicialización ──
-    // Pone fechas por defecto (ayer y hoy) sin cargar automáticamente.
-    // El usuario elige: "Sincronizar API" (trae datos frescos) o "Cargar desde BD" (rápido).
+    // Al abrir, carga automáticamente desde la BD (rápido, sin llamar APIs).
+    // El usuario puede luego "Sincronizar API" para traer datos frescos.
     (function() {
       var hoy  = new Date();
       var ayer = new Date(hoy.getTime() - 86400000);
       document.getElementById("fechaDesde").value = fmtDate(ayer);
       document.getElementById("fechaHasta").value = fmtDate(hoy);
+      cargarDesdeDB();
     })();
 
     function fmtDate(d) {
