--- a/apps-script/index.html
+++ b/apps-script/index.html
@@ -357,8 +357,34 @@
         },
         options: {
           responsive: true, maintainAspectRatio: true, cutout: "60%",
-          plugins: { legend: { position: "bottom", labels: { font: { size: 11, family: "Inter" }, padding: 12 } } }
-        }
+          plugins: {
+            legend: { position: "bottom", labels: { font: { size: 11, family: "Inter" }, padding: 12 } },
+            datalabels: {
+              color: "#fff", font: { weight: "bold", size: 13 },
+              formatter: function(value) { return value > 0 ? value : ""; }
+            }
+          }
+        },
+        plugins: [{
+          // Plugin inline: muestra valores fijos sobre cada segmento
+          id: "labels",
+          afterDatasetsDraw: function(chart) {
+            var ctx2 = chart.ctx;
+            chart.data.datasets.forEach(function(dataset, i) {
+              var meta = chart.getDatasetMeta(i);
+              meta.data.forEach(function(arc, idx) {
+                var val = dataset.data[idx];
+                if (val <= 0) return;
+                var pos = arc.tooltipPosition();
+                ctx2.fillStyle = "#fff";
+                ctx2.font = "bold 13px Inter";
+                ctx2.textAlign = "center";
+                ctx2.textBaseline = "middle";
+                ctx2.fillText(val, pos.x, pos.y);
+              });
+            });
+          }
+        }]
       });
     }
 
